# YeltsinDB

./: CMakeLists.txt  Doxyfile  README.md  journal_file.md  table_file.md  table_file_v0.md  table_file_v1.md
cmake/: FindCheck.cmake
inc/YDB_ext/: vec.c  vec.h
inc/YeltsinDB/: constants.h  error_code.h  journal.h  macro.h  table_page.h  types.h  ydb.h
inc/YeltsinDB/journal/: transaction.h  transaction_op.h
src/: journal.c  table_page.c  ydb.c
src/journal/: transaction.c
